fix announcementsHome alignment

--- a/AlmaDL-journalStyleSheet.scss
+++ b/AlmaDL-journalStyleSheet.scss
@@ -750,7 +750,7 @@ table.announcements td.more {
 	/* compact "announcementsHome" */
 	#announcementsHome {
 		font-size: 0.8em;
-		margin-bottom: 0;
+		margin: 0 auto;
 		padding: 5px 3%;
 		width: 94%;
 		& h3, & h4 {
